try new conda build stuff

--- a/tools/conda.recipe/meta.yaml
+++ b/tools/conda.recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   run:
-    - python >=3
+    - {{ pin_compatible('python') }}
     - numpy
     - scipy
     - matplotlib
