--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,30 +1,5 @@
 recursive-include old_grids *.pyx *.pxd *.h *.cpp
 recursive-exclude old_grids cext.cpp
 
-include data/setup_cfgs/*.cfg
-include data/setup_cfgs/README
-
-include doc/*.rst
-include doc/*.rst.template
-include doc/*.py
-include doc/doxygen.conf
-include doc/*.png
-include doc/*.svg
-include doc/Makefile
-include doc/_static/custom.css
-include doc/_templates/footer.html
-
-exclude doc/tech_ref_literature.rst
-exclude doc/tech_ref_functionals.rst
-exclude doc/user_download_and_install_linux.rst
-exclude doc/user_download_and_install_mac.rst
-exclude doc/user_download_and_install_windows.rst
-
-include tools/qa/common.sh
-include tools/qa/install_libint-2.0.3.sh
-include tools/qa/install_libxc-2.2.2.sh
-include tools/pre-commit
-
-include README
+include README.rst
 include COPYING
-include dependencies.json
