--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,7 @@ install:
 # Configure conda and get a few essentials
 - conda config --set always_yes yes
 - conda config --add channels theochem
-- conda install -q conda conda-build
+- conda install -q conda conda-build conda-verify
 
 # Set the version info from the git tag
 - git fetch origin --tags &&
