travis updates and README

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,6 @@ language: generic
 os:
   - linux
   - osx
-osx_image: xcode8.3
 dist: trusty
 sudo: false
 
@@ -111,11 +110,14 @@ install:
 
 # Get the right python version for building. This only does something for 3.5.
 # Install extra package needed to make things work. Most things can be listed as
-# dependencies on metal.yaml and setup.py, unless setup.py already imports them.
+# dependencies on meta.yaml and setup.py, unless setup.py already imports them.
 # Install conda tools for packaging and uploading
-- conda install -q python=${MYCONDAPY} anaconda-client ${CONDA_DEPENDENCIES}
-# Install more recent stuff with pip
-- pip install --upgrade pylint codecov coverage pycodestyle pydocstyle
+- conda install -q python=${MYCONDAPY} anaconda-client numpy setuptools cython
+- export CONDA_PY=${MYCONDAPY//./}
+- if ! [[ $TRAVIS_TAG ]]; then
+    conda install -q ${CONDA_DEPENDENCIES};
+    pip install --upgrade pylint codecov coverage pycodestyle pydocstyle;
+  fi
 # Show conda info for debugging
 - conda info -a
 
@@ -182,7 +184,7 @@ deploy:
   on:
     repo: ${GITHUB_REPO_NAME}
     tags: true
-    condition: "$MYCONDAPY == 2.7 && $TRAVIS_OS_NAME == linux && $TRAVIS_TAG == *[ab]*"
+    condition: "$MYCONDAPY == 3.6 && $TRAVIS_OS_NAME == linux && $TRAVIS_TAG == *[ab]*"
   prerelease: true
 
 - provider: releases
@@ -192,15 +194,24 @@ deploy:
   on:
     repo: ${GITHUB_REPO_NAME}
     tags: true
-    condition: "$MYCONDAPY == 2.7 && $TRAVIS_OS_NAME == linux && $TRAVIS_TAG != *[ab]*"
+    condition: "$MYCONDAPY == 3.6 && $TRAVIS_OS_NAME == linux && $TRAVIS_TAG != *[ab]*"
   prerelease: false
 
 - provider: script
   skip_cleanup: true
-  script: anaconda -t ${ANACONDA_TOKEN} upload --force -l ${ANACONDA_LABEL} ${HOME}/miniconda/conda-bld/*/${PROJECT_NAME}-*.tar.bz2
+  script: anaconda -t $ANACONDA_TOKEN upload --force -l ${ANACONDA_LABEL} ${HOME}/miniconda/conda-bld/*/${PROJECT_NAME}-*.tar.bz2
   on:
     repo: ${GITHUB_REPO_NAME}
     tags: true
+
+- provider: pypi
+  skip_cleanup: true
+  user: ${PYPI_LOGIN}
+  password: ${PYPI_PASSWD}
+  on:
+    repo: ${GITHUB_REPO_NAME}
+    tags: true
+    condition: "$TRAVIS_TAG != *[ab]* && $MYCONDAPY == 3.6 && $TRAVIS_OS_NAME == linux"
 
 - provider: pages
   skip_cleanup: true
@@ -209,5 +220,5 @@ deploy:
   local_dir: doc/_build/html
   on:
     repo: ${GITHUB_REPO_NAME}
-    condition: "-e doc && $TRAVIS_TAG != *[ab]* && $MYCONDAPY == 2.7 && $TRAVIS_OS_NAME == linux"
+    condition: "-e doc && $TRAVIS_TAG != *[ab]* && $MYCONDAPY == 3.6 && $TRAVIS_OS_NAME == linux"
     tags: true
