--- a/tools/conda.recipe/meta.yaml
+++ b/tools/conda.recipe/meta.yaml
@@ -16,7 +16,7 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   host:
-    - python >=3
+    - python =>3.6
     - numpy
     - cython >=0.24.1
     - setuptools
