Fix package build on Conda
- All run requirements have to be included in host requirements.
- Run requirements should be consistent with setup.py

--- a/tools/conda.recipe/meta.yaml
+++ b/tools/conda.recipe/meta.yaml
@@ -17,14 +17,18 @@ requirements:
     - {{ compiler('cxx') }}
   host:
     - python ={{ MYCONDAPY }}
-    - numpy
+    - numpy >=1.0
     - cython >=0.24.1
     - setuptools
     - nose
     - matplotlib
+    - scipy
   run:
     - python
+    - numpy >=1.0
     - scipy
+    - matplotlib
+    - nose
 test:
   requires:
     - nose
