--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,8 @@ deps =
     pytest-cov
     codecov
 commands =
-    python setup.py develop
-    pytest --cov-report term-missing --cov=src/grid/ tests
+    pip install -e .
+    pytest --cov-report term-missing --cov=src tests
     codecov
 
 [testenv:build]
@@ -32,7 +32,7 @@ deps =
     flake8-colors
 commands = 
     flake8 --version
-    flake8 src/grid/ setup.py
+    flake8 src/grid setup.py tests
 
 [testenv:black]
 basepython = python3
@@ -40,7 +40,7 @@ skip_install = true
 deps =
     black
 commands = 
-    black -v --check --diff src/grid
+    black -v --check --diff src/grid tests
 
 [flake8]
 max-line-length = 100
