Remove grid and update logistics
1. Move grid -> old_grid in the repo
2. Update setup.py for installation
3. Move tests to src/grid
4. Update tox to accommodate folder changes

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,8 @@ deps =
     pytest-cov
     codecov
 commands =
-    pip install -e .
-    pytest --cov-report term-missing --cov=src tests
+    pip install .
+    pytest --cov-report term-missing --cov=src/grid --pyargs grid
     codecov
 
 [testenv:build]
@@ -32,7 +32,7 @@ deps =
     flake8-colors
 commands =
     flake8 --version
-    flake8 src/grid setup.py tests
+    flake8 src/grid setup.py
 
 [testenv:black]
 basepython = python3
@@ -40,7 +40,7 @@ skip_install = true
 deps =
     black
 commands =
-    black -v --check --diff src/grid tests
+    black -v --check --diff src/grid
 
 [flake8]
 max-line-length = 100
