Add installation tests
1. Include install and build test in tox
2. Remove tests coverage
3. Update setup.py

--- a/tox.ini
+++ b/tox.ini
@@ -9,18 +9,21 @@ deps =
     pytest-cov
     codecov
 commands =
-    pip install .
-    pytest --cov-report term-missing --cov=src/grid --pyargs grid
+    pip install -e .
+    pytest --cov-report term-missing --cov=grid src/grid
     codecov
 
 [testenv:build]
 basepython = python3
 skip_install = true
 deps =
+    pytest
     wheel
     setuptools
 commands =
     python setup.py -q sdist bdist_wheel
+    pip install .
+    pytest --pyargs grid
 
 [testenv:flake8]
 basepython = python3
@@ -46,3 +49,6 @@ commands =
 max-line-length = 100
 ignore = E203
 format = ${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
+
+[coverage:run]
+omit = */test*
