Add basic grid class with weights and points
1. Add basic grid obejct
2. Temp add integral in grid class
3. Add basic tests for grid object

--- a/tox.ini
+++ b/tox.ini
@@ -47,7 +47,11 @@ commands =
 
 [flake8]
 max-line-length = 100
-ignore = E203
+ignore =
+    # false positive error
+    E203
+    # numpy stype docstring ignores
+    D107, D203, D212, D213, D402, D413
 format = ${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
 
 [coverage:run]
