--- a/tox.ini
+++ b/tox.ini
@@ -48,13 +48,14 @@ commands =
 [flake8]
 max-line-length = 100
 ignore =
-    # false positive error around :
+    # false positive error around ":" for slicing
     E203
     # numpy stype docstring ignores
     D107, D203, D212, D213, D402, D413
     # Not pep8 for operator
     W503
-format = ${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
+format =
+    ${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}:${red_bold}%(code)s${reset}%(text)s
 
 [coverage:run]
 omit = */test*
