Fix new pydocstyle incompatibility error

--- a/tox.ini
+++ b/tox.ini
@@ -30,8 +30,9 @@ basepython = python3
 skip_install = true
 deps =
     flake8
-    flake8-docstrings>=0.2.7
-    flake8-import-order>=0.9
+    flake8-docstrings >= 0.2.7
+    flake8-import-order >= 0.9
+    pydocstyle == 3.0.0
     flake8-colors
 commands =
     flake8 --version
