Add new github action to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 envlist = py36, py37, build, flake8, black
 skipsdist = true
+skip_missing_interpreters = true
+isolated_build = true
 ignore_errors = true
 
 [testenv]
@@ -60,3 +62,8 @@ format =
 
 [coverage:run]
 omit = */test*
+
+[gh]
+python =
+    3.6 = py36, build, flake8, black
+    3.7 = py37
