--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,37 @@
-name: GitHub Actions Demo
-on: [push]
+name: Github Action CI
+on:
+  push:
+  pull_request:
+  schedule:
+    - cron: "0 0 * * 0"
+
 jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
+  test:
+    name: test ${{ matrix.py }} - ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - Ubuntu
+            # - Windows
+            # - MacOs
+        py:
+            # - "3.10"
+            # - "3.9"
+          - "3.8"
+          - "3.7"
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: Setup python for test ${{ matrix.py }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.py }}
+      - uses: actions/checkout@v2
+      - name: Install tox-gh
+        run: python -m pip install tox-gh
+      - name: Setup test suite
+        run: tox r -vv --notest
+      - name: Run test suite
+        run: tox r --skip-pkg-install
+        env:
+          PYTEST_ADDOPTS: "-vv --durations=10"
