--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
-envlist = py36, py37, build, flake8, black
+envlist = py37, py38, build, flake8, black
 skipsdist = true
 skip_missing_interpreters = true
 isolated_build = true
 ignore_errors = true
+minversion = 4.0.0a10
 
 [testenv]
 passenv = CI TRAVIS TRAVIS_*
@@ -65,5 +66,5 @@ omit = */test*
 
 [gh]
 python =
-    3.6 = py36, build, flake8, black
-    3.7 = py37
+    3.7 = py37, build, flake8, black
+    3.8 = py38
