--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,10 @@ ignore_errors = true
 minversion = 4.0.0a10
 
 [testenv]
-passenv = CI TRAVIS TRAVIS_*
+passenv = 
+    CI
+    TRAVIS
+    TRAVIS_*
 deps =
     pytest-cov
     codecov
