--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,6 @@
 name: Github Action CI
 on:
+  workflow_dispatch:
   push:
   pull_request:
   schedule:
@@ -23,10 +24,10 @@ jobs:
           - "3.7"
     steps:
       - name: Setup python for test ${{ matrix.py }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.py }}
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Install tox-gh
         run: python -m pip install tox-gh
       - name: Setup test suite
