--- a/.github/workflows/ci_tox.yml
+++ b/.github/workflows/ci_tox.yml
@@ -1,38 +1,35 @@
-name: Github Action CI
+name: CI Tox
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # Needed to manually run github actions
   push:
   pull_request:
-  schedule:
-    - cron: "0 0 * * 0"
+    branches: [ master ]
 
 jobs:
   test:
     name: test ${{ matrix.py }} - ${{ matrix.os }}
     runs-on: ${{ matrix.os }}-latest
     strategy:
-      fail-fast: false
+      fail-fast: false  # If anything in the matrix fails, then everything queued and in-progress will canceled
       matrix:
-        os:
-          - Ubuntu
-            # - Windows
-            # - MacOs
-        py:
-            # - "3.10"
-            # - "3.9"
-          - "3.8"
-          - "3.7"
+        # Which environment and python versions to be runned on.
+        os: [ubuntu macos windows]
+        py: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+
     steps:
+      - uses: actions/checkout@v3
       - name: Setup python for test ${{ matrix.py }}
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.py }}
-      - uses: actions/checkout@v3
       - name: Install tox-gh
-        run: python -m pip install tox-gh
+        run: |
+          python -m pip install --upgrade pip
+          pip install tox tox-gh-actions
       - name: Setup test suite
-        run: tox r -vv --notest
+        run: tox r -vv --notest # r means run environments,  -vv verbose --notest skip invoking test commands.
       - name: Run test suite
+        # --skip-pkg-install  skips installing the package
         run: tox r --skip-pkg-install
         env:
           PYTEST_ADDOPTS: "-vv --durations=10"
