Multipole Moments and Recursive Spherical Harmonics (#155)
* Change generate_spherical naming to include scipy

Also support Horton order

* Add recursion for spherical harmonics

* Refactor derivative of spherical harmonic

* Add solid harmonic from recursion spherical harm

* Fix a sign issue on spherical harmonic

This is to make sure that it matches literature and easier
to implement formulas like the derivatives

* Add tests for solid harmonics

Test to match scipy spherical harmonic with recursion formula,
test to match solid harmonic with spherical harmonic
test to match solid harmonic with analytic results

* Add multipole moments to basegrid

Added cartesian, radial, pure, pure-radial

* Add tests to multipole moments

- Tested against wolframalpha of Gaussian (cartesian moments)
- Tested identify function of pure multimole moments
- Test pure multipole moments against horton
- Test radial multipole moements against horton
- Tested pure-radial against identity and spherical harmonic

* Add utility function for multimole

Generates all the orders based on what the type of multipole
moments

* Fix flake8 and black

Added ignore erros E731 to flake 8 to allow lambda functions

--- a/tox.ini
+++ b/tox.ini
@@ -55,6 +55,8 @@ commands =
 [flake8]
 max-line-length = 100
 ignore =
+    # Not being able to use lambda functions
+    E731
     # false positive error around ":" for slicing
     E203
     # numpy stype docstring ignores
