--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,7 @@
 include README.md
+include LICENSE
+include grid.data/*.*
+include grid.data.lebedev/*.npz
+include grid.data.spherical_design/*.npz
+include grid.data.prune_grid/*.npz
+include grid.data.proatoms/*.npz
