--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,10 +37,6 @@ dependencies = [
 ]
 dynamic = ["version"]
 
-#packages = [
-#    {include = ['grid', 'grid.data', 'grid.tests', 'grid.data.prune_grid', 'grid.data.proatoms', 'grid.data.spherical_design', 'grid.data.lebedev', 'grid.data.tests']}
-#]
-
 [project.urls]
 Documentation = "https://grid.qcdevs.org"
 Issues = "https://github.com/theochem/grid/issues"
@@ -55,12 +51,19 @@ doc = ["numpydoc", "sphinx_copybutton", "sphinx-autoapi", "nbsphinx", "sphinx_rt
 #line-length = 100
 #target-version = ['py310']
 #
-#[tool.ruff]
-#select = ["E", "F", "UP", "B", "I", "PGH", "PL", "RUF"]
-#line-length = 100
-#target-version = "py310"
-#ignore = ["PLR2004", "PLR0913", "PLR0912", "PLW2901", "PLR0915"]
-#
+[tool.ruff]
+# E is pycodestyle
+# F is pyflakes
+# UP is pyupgrade - automatically updates syntax
+# B is flake8-bugbear
+# I is sort imports alphabetically
+# PGH is pygrep-hooks
+# PL is pylint
+# RUF is Ruff-specific rules
+select = ["E", "F", "UP", "B", "I", "PGH", "PL", "RUF"]
+line-length = 100
+ignore = ["PLR2004", "PLR0913", "PLR0912", "PLW2901", "PLR0915"]
+
 #[tool.pytest.ini_options]
 #minversion = "7.0"
 #testpaths = ["tests"]
