--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,13 +44,18 @@ Source = "https://github.com/theochem/grid/"
 Changelog = "https://github.com/theochem/grid/blob/main/CHANGELOG.md"
 
 [project.optional-dependencies]
-doc = ["numpydoc", "sphinx_copybutton", "sphinx-autoapi", "nbsphinx", "sphinx_rtd_theme", "sphinx_autodoc_typehints"]
+doc = [
+    "numpydoc",
+    "sphinx_copybutton",
+    "sphinx-autoapi",
+    "nbsphinx",
+    "sphinx_rtd_theme",
+    "sphinx_autodoc_typehints"
+]
 
+[tool.black]
+line-length = 100
 
-#[tool.black]
-#line-length = 100
-#target-version = ['py310']
-#
 [tool.ruff]
 # E is pycodestyle
 # F is pyflakes
@@ -64,12 +69,12 @@ select = ["E", "F", "UP", "B", "I", "PGH", "PL", "RUF"]
 line-length = 100
 ignore = ["PLR2004", "PLR0913", "PLR0912", "PLW2901", "PLR0915"]
 
-#[tool.pytest.ini_options]
-#minversion = "7.0"
-#testpaths = ["tests"]
-#addopts = "-v"
-#
-#[tool.setuptools_scm]
-#write_to = "src/denspart/_version.py"
-#version_scheme = "post-release"
-#local_scheme = "no-local-version"
+[tool.pytest.ini_options]
+minversion = "7.0"
+testpaths = ["tests"]
+addopts = "-v"
+
+[tool.setuptools_scm]
+write_to = "src/grid/_version.py"
+version_scheme = "post-release"
+local_scheme = "no-local-version"
