--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -11,11 +11,12 @@ on:
 jobs:
   tests:
     name: "Python ${{ matrix.py }}"
-    runs-on: "ubuntu-latest"
+    runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        py: ["3.6", "3.7", "3.10", "3.11"]
+        os: ["ubuntu-latest", "windows-latest"]
+        py: ["3.9", "3.10", "3.11"]
 
     steps:
       - uses: "actions/checkout@v3"
