--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        os: ["windows-latest"]#, "ubuntu-latest", ]
+        os: ["ubuntu-latest", "windows-latest"]
         py: ["3.9", "3.10", "3.11"]
 
     steps:
