--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ line-length = 100
 # RUF is Ruff-specific rules
 select = ["E", "F", "UP", "B", "I", "PGH", "PL", "RUF"]
 line-length = 100
-ignore = ["PLR2004", "PLR0913", "PLR0912", "PLW2901", "PLR0915"]
+ignore = ["PLR2004", "PLR0913", "PLR0912", "PLW2901", "PLR0915", "RUF013"]
 extend-exclude = ["doc/*", "doc/*/*"]
 
 [tool.pytest.ini_options]
