--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Install development and distributions version
       run: |
-        pip install -e .[doc]
+        pip install .[doc]
 
     # didn't need to change anything here, but had to add sphinx.ext.githubpages
     # to my conf.py extensions list. that fixes the broken uploads
