Try again: add permission to github token

--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -17,6 +17,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      deployments: write
 
     steps:
     - uses: actions/checkout@v3
