Try again: add permission to github token4

--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -24,6 +24,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+      deployments: write
+      pages: write
+
     steps:
     - uses: actions/checkout@v3
 
