--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 numpy>=1.16
 pytest>=2.6
 scipy>=1.4
+matplotlib
 importlib_resources
 sympy
 numpydoc
@@ -8,3 +9,5 @@ sphinx_copybutton
 sphinx-autoapi
 nbsphinx
 sphinx_rtd_theme
+nbsphinx-link
+docutils==0.16  # Needed to show bullet points in sphinx_rtd_theme
