--- a/.github/workflows/pypi_release.yaml
+++ b/.github/workflows/pypi_release.yaml
@@ -18,7 +18,7 @@ on:
 
 env:
   # The name of the package to be published to PyPI and TestPyPI.
-  PYPI_NAME: qc-grid
+  PYPI_NAME: qc-grids
 
 jobs:
   build:
