--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ doc = [
     "nbconvert",
     "sphinx_rtd_theme",
     "sphinx_autodoc_typehints",
-    "docutils==0.16",  # Needed to show bullet points in sphinx_rtd_theme
+    "docutils>=0.20",  # Compatible with modern Sphinx versions
     "nbsphinx-link"
 ]
 
