--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,9 +50,9 @@ doc = [
     "sphinx-autoapi",
     "nbsphinx",
     "nbconvert",
-    "sphinx_rtd_theme",
+    "sphinx-rtd-theme>=3.0.0rc1",
     "sphinx_autodoc_typehints",
-    "docutils>=0.20",  # Compatible with modern Sphinx versions
+    "docutils >0.18,<0.22",  # Compatible with modern Sphinx versions
     "nbsphinx-link"
 ]
 
